ci: simplify style check in CI workflow
Updated the CI workflow by removing the formatting step from the style check, retaining only the linting command. This change streamlines the CI process, focusing on code quality checks without automatic formatting.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,7 @@ jobs:
           enable-cache: true
 
       - name: Check style
-        run: |
-          set -e
-
-          uvx ruff check --fix
-          uvx ruff format
+        run: uvx ruff check
 
       - name: Run tests
         env:
