chore: update pyproject.toml to ignore E501 for line length
Added an ignore rule for E501 (line too long) in the pyproject.toml file, indicating that line length issues will be managed by the Black formatter. This change helps streamline code formatting practices.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,7 @@ select = [
     "UP",  # pyupgrade
     "ARG001", # unused arguments in functions
 ]
+
+ignore = [
+    "E501",  # line too long, handled by black
+]
